ass local trans;ation

--- a/smartscanner-core-feature-settings-arabic/core-lib/src/main/res/values-ar/strings.xml
+++ b/smartscanner-core-feature-settings-arabic/core-lib/src/main/res/values-ar/strings.xml
@@ -21,7 +21,7 @@
     <string name="status_bar_success">OCR Detected - Time required: %2dms</string>
     <string name="status_bar_failure">OCR Read failure - Time required: %1d ms</string>
 
-    <string name="nfc_title">Put your phone over your passport and don\'t move it</string>
+    <string name="nfc_title">ضع هاتفك فوق جواز سفرك ولا تحركه</string>
 
     <string name="label_document_number">رقم المستند</string>
     <string name="label_document_expiry">تاريخ النفاذ</string>
